# pytorch_lightning_example

./: .gitignore  Makefile  README.md  classification.code-workspace  mypy.ini  pyproject.toml  ruff.toml  semantic-segmentation.code-workspace
.cursor/rules/: environment.mdc  lint-markdown.mdc  lint-yaml.mdc
1_classification_animeface/: README.md  pyproject.toml  train.sh
1_classification_animeface/config/: base.yaml  config.yaml  qat.yaml
1_classification_animeface/py/: AnimeFaceDataModule.py  AnimeFaceDownloader.py  CustomMlFlowLogger.py  ImageClassifier.py  MlflowWriter.py  main.py  qat.py  train.py  utils.py
1_classification_food101/: README.md  train.sh
1_classification_food101/config/: base.yaml
1_classification_food101/src/: ClassificationDataModule.py  Food101Dataset.py  Food101Downloader.py  ImageClassifier.py  inference.py  model.py  qat.py  train.py
5-segmentation_voc/: README.md  train.sh
5-segmentation_voc/config/: config.yaml
5-segmentation_voc/config/arch/: large.yaml  small.yaml
5-segmentation_voc/py/: CustomMlFlowLogger.py  ImageSegmentator.py  MlflowWriter.py  VOC2012Downloader.py  VOCSegDataModule.py  demo_webcam.py  main.py  train.py
5-segmentation_voc/scripts/: demo.sh  train.sh
5_segmentation_voc/config/arch/: large.yaml  small.yaml
5_segmentation_voc/scripts/: demo.sh
5_segmentation_voc/src/: ImageSegmentator.py  VOC2012Downloader.py  VOCSegDataModule.py  VOCSegDataset.py  demo_webcam.py  train.py  utils.py
classification/: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
classification/.cursor/rules/environment/: RULE.md
classification/.cursor/rules/environment/scripts/: install.sh
classification/.cursor/rules/lint-markdown/: RULE.md
classification/.cursor/rules/lint-markdown/scripts/: lint.sh
classification/.cursor/rules/lint-python/: RULE.md
classification/.cursor/rules/lint-python/scripts/: lint.sh
classification/.cursor/rules/lint-yaml/: RULE.md
classification/.cursor/rules/lint-yaml/scripts/: lint.sh
classification/.cursor/rules/test/: RULE.md
classification/config/: base.yaml  qat.yaml
classification/config/_base_/: default.yaml
classification/config/_base_/augmentation/: basic.yaml  strong.yaml
classification/config/_base_/dataset/: food101.yaml
classification/config/_base_/loss/: cross_entropy.yaml  cross_entropy_balanced.yaml  focal.yaml
classification/config/_base_/model/: convnext_base.yaml  efficientnet_b0.yaml  efficientnet_b4.yaml  efficientnetv2_s.yaml  mobilenet_v2.yaml  resnet50.yaml  swin_base.yaml  swin_tiny.yaml
classification/config/_base_/optimizer/: adamw.yaml  sgd.yaml
classification/config/_base_/scheduler/: cosine_annealing.yaml  flat_cosine.yaml  step_lr.yaml
classification/config/_base_/trainer/: default.yaml
classification/config/experiments/: food101_efficientnet_b0.yaml  food101_efficientnet_b4.yaml  food101_mobilenet_v2.yaml
classification/docs/: CONFIGURATION.md  DEVELOPMENT.md  SPECIFICATION.md
classification/py/: MlflowWriter.py  main.py
classification/scripts/: kill_mlflow.sh  mlflow_ui.sh  run.sh  train.sh
classification/src/: ClassificationDataModule.py  Food101Dataset.py  Food101Downloader.py  ImageClassifier.py  __init__.py  export_onnx.py  train.py  utils.py  validate.py
classification/src/builders/: __init__.py  augmentation.py  logger.py  loss.py  optimizer.py
classification/src/config/: __init__.py  loader.py  schema.py
classification/src/data/: __init__.py  datamodule.py  dataset.py
classification/src/models/: __init__.py  classifier.py
classification/src/utils/: __init__.py  metrics.py  timer.py
classification/tests/: test_augmentation.py  test_config_schema.py
classification/tools/: Food101Builder.py  Food101Downloader.py  prepare_food101.py
semantic-segmentation/: README.md  pyproject.toml
semantic-segmentation/scripts/: train.sh
semantic-segmentation/src/: ImageSegmentator.py  VOC2012Downloader.py  VOCSegDataset.py  demo_webcam.py
