[tool.poetry]
name = "pytorch_lightning_example"
version = "0.1.0"
description = ""
authors = ["chatflip <oo.chat.flip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
torch = "^1.9.1"
torchvision = "^0.10.1"
hydra-core = "^1.1.1"
mlflow = "^1.21.0"
pytorch-lightning = "^1.5.0"
albumentations = "^1.1.0"
segmentation-models-pytorch = "^0.2.0"

[tool.poetry.dev-dependencies]
pysen = "*"
black = "=21.10b0"
flake8 = "=4.0.1"
isort = "=5.10.1"
mypy = "=0.910"
autopep8 = "*"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "very_strict"
line_length = 88
py_version = "py37"

[tool.pysen.lint.source]
includes = ["."]
exclude_globs = ["5-segmentation_voc/py/SegLoss-master/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
