[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "2.5.1"
torchvision = "0.20.1"
pytorch-lightning = "2.4.0"
timm = "0.9.7"
segmentation-models-pytorch = "0.3.4"
albumentations = "1.4.21"
mlflow = "2.18.0"
hydra-core = "1.3.2"
opencv-python = "^4.10.0.84"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
mypy = "1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
