[project]
name = "classification"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "mlflow>=3.8.1",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxscript>=0.1.0",
    "pydantic>=2.0.0",
    "lightning~=2.6.0",
    "pyyaml>=6.0.0",
    "seaborn>=0.13.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "onnxsim>=0.4.36",
]

[dependency-groups]
lint = [
    "ruff>=0.14.10",
    "ty>=0.0.7",
]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128"}]
torchvision = [{ index = "pytorch-cu128"}]

[tool.uv]
default-groups = []

[tool.ruff]
target-version = "py312"

# Set the maximum line length to 88.
line-length = 88

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["C", "E", "F", "I", "W", "D"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D400",  # First line should end with a period
    "D415"  # First line should end with a period, question mark, or exclamation point
]

extend-select = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = ["src", "tests", "tools"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=./",
    "--cov-report=xml",
    "--verbose",
]
